// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NFT Default Image should match snapshot with all provided props 1`] = `
<div>
  <button
    class="nft-default nft-default--clickable"
    data-testid="nft-default-image"
    tabindex="0"
  >
    <h6
      class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography nft-default__text typography--h6 typography--weight-normal typography--style-normal typography--color-text-default"
    >
      NFT Name
       
      <br />
       #
      123
    </h6>
  </button>
</div>
`;

exports[`NFT Default Image should match snapshot with missing image click handler 1`] = `
<div>
  <div
    class="nft-default"
    data-testid="nft-default-image"
    tabindex="0"
  >
    <h6
      class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography nft-default__text typography--h6 typography--weight-normal typography--style-normal typography--color-text-default"
    >
      NFT Name
       
      <br />
       #
      123
    </h6>
  </div>
</div>
`;

exports[`NFT Default Image should render with no props 1`] = `
<div>
  <div
    class="nft-default"
    data-testid="nft-default-image"
    tabindex="0"
  >
    <h6
      class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography nft-default__text typography--h6 typography--weight-normal typography--style-normal typography--color-text-default"
    >
      [unknownCollection]
       
      <br />
       #
    </h6>
  </div>
</div>
`;
